p2/confs/02-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
