p2/confs/03-app1-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: app1-svc
  namespace: iot 
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
