p2/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc

spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 8080
